fp-macros/tests/ui/apply_missing_brand.stderr
error: unexpected end of input, Missing 'brand'
 --> tests/ui/apply_missing_brand.rs:6:14
  |
6 |       type T = Apply!(
  |  ______________^
7 | |         signature: (i32)
8 | |     );
  | |_____^
  |
  = note: this error originates in the macro `Apply` (in Nightly builds, run with -Z macro-backtrace for more info)
